--- a/client/src/pages/Winner/Winner.scss
+++ b/client/src/pages/Winner/Winner.scss
@@ -1,9 +1,35 @@
+@use "../../partials/mixins" as *;
+@use "../../partials/variables" as *;
+
+
 .winner{
-    display: flex;
-    position: relative;
+    @include flex;
+    @include flex-center;
+    position: absolute;
     z-index: 1;
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.4);
     height: 100vh;
     width: 100vw;
 
+    &__content-container{
+        @include flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: rgba(0,0,0,0.6);
+        width: 40%;
+        height: 40%;
+        border-radius: 10px;
+    }
+
+    &__content{
+        margin: 0;
+    }
+
+    &__reset{
+        @include flex;
+        @include flex-center;
+        min-width: 30%;
+        min-height: 10%;
+    }
 }
