--- a/client/src/components/GameBoard/GameBoard.scss
+++ b/client/src/components/GameBoard/GameBoard.scss
@@ -1,4 +1,5 @@
 @use "../../partials/mixins" as *;
+@use "../../partials/variables" as *;
 
 
 .gameBoard{
@@ -7,26 +8,26 @@
 }
 
 .row{
-    height: 25px;
+    height: $gameBoardSize;
 }
 
 .cell--online-player{
-    width: 25px;
-    height: 25px;
+    width: $gameBoardSize;
+    height: $gameBoardSize;
     display: inline-block;
 }
 
 .cell--inactive{
-    width: 25px;
-    height: 25px;
+    width: $gameBoardSize;
+    height: $gameBoardSize;
     outline: 1px solid black;
     display: inline-block;
     background-color: gray;
 }
 
 .cell--active{
-    width: 25px;
-    height: 25px;
+    width: $gameBoardSize;
+    height: $gameBoardSize;
     outline: 1px solid black;
     display: inline-block;
 
