spectator bugs fixed

--- a/client/src/components/GameBoard/GameBoard.scss
+++ b/client/src/components/GameBoard/GameBoard.scss
@@ -15,6 +15,7 @@
     width: $gameBoardSize;
     height: $gameBoardSize;
     display: inline-block;
+    outline: 1px solid black;
 }
 
 .cell--inactive{
